# llm-eval-platform

./: .gitignore  AGENTS.md  DECISIONS.md  PROJECT_STATE.md  README.md  pyproject.toml
CHECKPOINTS/: PROJECT_STATE_2026-02-25_2338.md  PROJECT_STATE_2026-02-25_2345.md  PROJECT_STATE_2026-02-26_0853.md
configs/: baseline.yaml  candidate.yaml
datasets/: sample_benchmark.jsonl
src/llm_eval_platform/: analysis.py  api.py  cli.py  config.py  logging.py  service.py
src/llm_eval_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm_eval_platform/domain/: models.py
src/llm_eval_platform/ingestion/: registry.py
src/llm_eval_platform/reporting/: exporter.py
src/llm_eval_platform/runner/: experiment.py  ollama_client.py  retrieval.py
src/llm_eval_platform/scoring/: gates.py  metrics.py
src/llm_eval_platform/storage/: db.py  repository.py
src/llm_eval_platform/web/static/: app.jsx
src/llm_eval_platform/web/templates/: index.html
tests/: test_analysis.py  test_api.py  test_gates.py  test_metrics.py
